--- a/IVR/IVR.csproj
+++ b/IVR/IVR.csproj
@@ -44,13 +44,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Call.cs" />
+    <Compile Include="Factory.cs" />
     <Compile Include="IEventHandler.cs" />
+    <Compile Include="MenuFactory.cs" />
     <Compile Include="nodes\ChoiceNode.cs" />
     <Compile Include="nodes\MessageNode.cs" />
     <Compile Include="nodes\Node.cs" />
     <Compile Include="nodes\INode.cs" />
+    <Compile Include="order\Size.cs" />
+    <Compile Include="order\Topping.cs" />
+    <Compile Include="order\Pizza.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ToppingsFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
