--- a/IVR/IVR.csproj
+++ b/IVR/IVR.csproj
@@ -48,22 +48,24 @@
     <Compile Include="IEventHandler.cs" />
     <Compile Include="MenuFactory.cs" />
     <Compile Include="nodes\ChoiceNode.cs" />
+    <Compile Include="nodes\ConfirmationNode.cs" />
+    <Compile Include="nodes\EndNode.cs" />
     <Compile Include="nodes\MessageNode.cs" />
     <Compile Include="nodes\Node.cs" />
     <Compile Include="nodes\INode.cs" />
+    <Compile Include="order\IItem.cs" />
     <Compile Include="order\Size.cs" />
     <Compile Include="order\Topping.cs" />
     <Compile Include="order\Pizza.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="prompts\Prompt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToppingsFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="prompts\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
